Fix up spacing for account name. Fixes #95.

--- a/views/sass/style.scss
+++ b/views/sass/style.scss
@@ -148,8 +148,8 @@ body {
     line-height: 20px;
     font-weight: normal;
     color: #808080;
-    padding-top: 3px;
-        
+    height: 22px;
+    
     border: none;
     margin-left: 6px;
     width: 370px;
